feat: sync channel immediately after registration
